--- a/notebooks/chap01.ipynb
+++ b/notebooks/chap01.ipynb
@@ -93,7 +93,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded gss_bayes.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data file\n",
     "\n",
@@ -127,7 +135,110 @@
      "shell.execute_reply": "2021-04-16T19:35:09.081454Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>polviews</th>\n",
+       "      <th>partyid</th>\n",
+       "      <th>indus10</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>caseid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4970.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2670.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6870.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7860.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        year   age  sex  polviews  partyid  indus10\n",
+       "caseid                                             \n",
+       "1       1974  21.0    1       4.0      2.0   4970.0\n",
+       "2       1974  41.0    1       5.0      0.0   9160.0\n",
+       "5       1974  58.0    2       6.0      1.0   2670.0\n",
+       "6       1974  30.0    1       5.0      4.0   6870.0\n",
+       "7       1974  48.0    1       5.0      4.0   7860.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -180,7 +291,24 @@
      "shell.execute_reply": "2021-04-16T19:35:09.095986Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "caseid\n",
+       "1    False\n",
+       "2    False\n",
+       "5    False\n",
+       "6     True\n",
+       "7    False\n",
+       "Name: indus10, dtype: bool"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "banker = (gss['indus10'] == 6870)\n",
     "banker.head()"
@@ -206,7 +334,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.103159Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "728"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "banker.sum()"
    ]
@@ -231,7 +370,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.111310Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "banker.mean()"
    ]
@@ -288,7 +438,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.125312Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker)"
    ]
@@ -342,7 +503,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.140543Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5378575776019476"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(female)"
    ]
@@ -411,7 +583,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.152013Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27374721038750255"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(liberal)"
    ]
@@ -477,7 +660,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.165317Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3662609048488537"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat)"
    ]
@@ -507,7 +701,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.171252Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker)"
    ]
@@ -530,7 +735,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.177292Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3662609048488537"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat)"
    ]
@@ -553,7 +769,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.183516Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004686548995739501"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker & democrat)"
    ]
@@ -578,7 +805,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.190185Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004686548995739501"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat & banker)"
    ]
@@ -649,7 +887,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.203214Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5206403320240125"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(selected)"
    ]
@@ -681,7 +930,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.210120Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "selected = female[banker]\n",
     "prob(selected)"
@@ -733,7 +993,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.221981Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27581004111500884"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(liberal, given=female)"
    ]
@@ -771,7 +1042,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.227808Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(female, given=banker)"
    ]
@@ -794,7 +1076,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.235854Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02116102749801969"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(banker, given=female)"
    ]
@@ -828,7 +1121,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.244621Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.576085409252669"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(female, given=liberal & democrat)"
    ]
@@ -853,7 +1157,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.250686Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17307692307692307"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(liberal & female, given=banker)"
    ]
@@ -918,7 +1233,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.258250Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "female[banker].mean()"
    ]
@@ -941,7 +1267,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.264191Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(female, given=banker)"
    ]
@@ -971,7 +1308,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.271337Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7706043956043956"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(female & banker) / prob(banker)"
    ]
@@ -1013,7 +1361,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.277739Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1425238385067965"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(liberal & democrat)"
    ]
@@ -1036,7 +1395,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.286268Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1425238385067965"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(democrat) * conditional(liberal, democrat)"
    ]
@@ -1088,7 +1458,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.293307Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2239010989010989"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conditional(liberal, given=banker)"
    ]
@@ -1111,7 +1492,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.301729Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2239010989010989"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(liberal) * conditional(banker, liberal) / prob(banker)"
    ]
@@ -1156,7 +1548,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.309041Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(banker)"
    ]
@@ -1208,7 +1611,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.324375Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391155"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prob(male & banker) + prob(female & banker)"
    ]
@@ -1237,7 +1651,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.335726Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391153"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(prob(male) * conditional(banker, given=male) +\n",
     "prob(female) * conditional(banker, given=female))"
@@ -1266,7 +1691,25 @@
      "shell.execute_reply": "2021-04-16T19:35:09.345920Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0     1442\n",
+       "2.0     5808\n",
+       "3.0     6243\n",
+       "4.0    18943\n",
+       "5.0     7940\n",
+       "6.0     7319\n",
+       "7.0     1595\n",
+       "Name: polviews, dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "B = gss['polviews']\n",
     "B.value_counts().sort_index()"
@@ -1291,7 +1734,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.354093Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005822682085615744"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "i = 4\n",
     "prob(B==i) * conditional(banker, B==i)"
@@ -1315,7 +1769,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.370597Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.014769730168391157"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(prob(B==i) * conditional(banker, B==i)\n",
     "    for i in range(1, 8))"
@@ -1397,14 +1862,26 @@
      "shell.execute_reply": "2021-04-16T19:35:09.378643Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5378575776019476"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "(gss[\"sex\"]==2).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.383986Z",
@@ -1413,9 +1890,21 @@
      "shell.execute_reply": "2021-04-16T19:35:09.387425Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.011381618989653074"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "# Solution goes here\n",
+    "((gss[\"sex\"]==2 )& (gss[\"indus10\"]==6870)).mean()"
    ]
   },
   {
@@ -1510,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.423028Z",
@@ -1519,7 +2008,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.425960Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17328058429701765"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "old = (gss['age'] >= 65)\n",
     "prob(old)"
@@ -1536,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.429448Z",
@@ -1545,7 +2045,18 @@
      "shell.execute_reply": "2021-04-16T19:35:09.432875Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3419354838709677"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conservative = (gss['polviews'] >= 5)\n",
     "prob(conservative)"
@@ -1621,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-04-16T19:35:09.458973Z",
@@ -1630,21 +2141,34 @@
      "shell.execute_reply": "2021-04-16T19:35:09.463061Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19597721609113564"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution goes here"
+    "(old[conservative]).mean()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1658,7 +2182,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
